@@ -1,4 +1,5 @@
 8f465d3ec1cba00a7d024a1964e74bb6d241f86a73c77d95d8ceb10d09c8f7b9  roms/CAT
+59f0502748af32e3096e026a95e77216179cccfe803a05803317414643e2fcec  roms/DEHEX
 0aacf6258e9de0acde755229ad14e6ce13ab7a43b0360dadeb862f8facccc422  roms/forth
 4c146297da8c672955698a82207295b28feb389c9856a2c6ea6a60ce7e84260a  roms/lisp
 2b9727381aec15a504c0898189fbc2344209d8e04451e3fa5d743e08e38f64cf  roms/M0
